--- a/zoe 21/src/main/resources/com/example/zoe21/regularGame.fxml
+++ b/zoe 21/src/main/resources/com/example/zoe21/regularGame.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.TextFormatter?>
 <AnchorPane fx:id="gameLayout" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoe21.RegularGameController">
 
     <children>
@@ -24,7 +25,11 @@
         <TextField fx:id="inputField" alignment="CENTER" layoutX="34.0" layoutY="176.0" onKeyPressed="#onKeyPressed">
             <font>
                 <Font size="18.0" />
-            </font></TextField>
+            </font>
+            <textFormatter>
+                <TextFormatter filter="NUMERIC" />
+            </textFormatter>
+        </TextField>
         <Button fx:id="sumButton" layoutX="34.0" layoutY="230.0" onAction="#onSumSelect" prefHeight="26.0" prefWidth="160.0" text="Sum">
             <font>
                 <Font size="14.0" />
