--- a/zoe 21/src/main/resources/com/example/zoe21/mainmenu.fxml
+++ b/zoe 21/src/main/resources/com/example/zoe21/mainmenu.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="gameLayout" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoe21.MainController">
+<AnchorPane fx:id="gameLayout" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoe21.MainController">
 
     <children>
-        <Button fx:id="highscoreButton" layoutX="248.0" layoutY="155.0" onAction="#onHighScoreButtonClick" text="Highscore" />
-        <Button fx:id="regularGameButton" layoutX="238.0" layoutY="200.0" onAction="#onRegularGameButtonClick" text="Regular Game" />
-        <Button fx:id="machineGameButton" layoutX="236.0" layoutY="246.0" onAction="#onMachineGameButtonClick" text="Machine Game" />
-        <Label fx:id="welcomeText" layoutX="258.0" layoutY="113.0" text="Welcome!" />
+        <Button fx:id="highscoreButton" layoutX="265.0" layoutY="155.0" onAction="#onHighScoreButtonClick" text="Highscore" textAlignment="CENTER" />
+        <Button fx:id="regularGameButton" layoutX="254.0" layoutY="200.0" onAction="#onRegularGameButtonClick" text="Regular Game" />
+        <Button fx:id="machineGameButton" layoutX="252.0" layoutY="246.0" onAction="#onMachineGameButtonClick" text="Machine Game" />
+        <Label fx:id="welcomeText" layoutX="18.0" layoutY="37.0" prefHeight="109.0" prefWidth="563.0" text="Welcome to 21 Wins! The Game where friendship ends..." textAlignment="CENTER" wrapText="true">
+            <font>
+                <Font name="PressStart2P-Regular" size="12.0" />
+            </font>
+        </Label>
     </children>
 </AnchorPane>
