--- a/zoe 21/src/main/resources/com/example/zoe21/highscore.fxml
+++ b/zoe 21/src/main/resources/com/example/zoe21/highscore.fxml
@@ -1,11 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="gameLayout" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoe21.HighscoreController">
+<AnchorPane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.zoe21.HighscoreController">
     <children>
-        <Button fx:id="backtomenu" layoutX="136.0" layoutY="300.0" onAction="#setBacktomenu" prefHeight="47.0" prefWidth="329.0" text="Back to Menu" textAlignment="CENTER" />
-        <Label fx:id="highscoreLabel" layoutX="50.0" layoutY="50.0" prefWidth="500.0" prefHeight="200.0" wrapText="true" style="-fx-font-size: 14pt;" />
+        <Label fx:id="highscoreLabel" layoutX="267.0" layoutY="124.0" text="Highscore">
+            <font>
+                <Font size="64.0" />
+            </font>
+        </Label>
+        <Button fx:id="backToMainMenuButton" layoutX="340.0" layoutY="722.0" mnemonicParsing="false" onAction="#setBackToMenu" text="Back to Main Menu" />
+        <GridPane layoutX="261.0" layoutY="290.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+
+            <Label text="Rank" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Label text="Name" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Label text="Score" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="1" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="1" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="2" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="2" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="3" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="3" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="3" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="4" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="4" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="4" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="5" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="5" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="5" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="6" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="6" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="6" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="7" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="7" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="7" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="8" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="8" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="8" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="9" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="9" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="9" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+
+            <Label GridPane.columnIndex="0" GridPane.rowIndex="10" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="1" GridPane.rowIndex="10" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="10" prefWidth="10.0" prefHeight="30.0" textFill="#eaff00"/>
+        </GridPane>
     </children>
 </AnchorPane>
